# differential-treatment

./: .gitignore  CLAUDE.md  README.md  VERIFICATION_LOG.md  pyproject.toml
configs/: live_smoke.json  mock_biased.json  mock_null.json  mock_panel.json  over40_vs_young.json  (+3 more)
distinguish/: .gitignore  CLAUDE.md  README.md  pyproject.toml
distinguish/configs/: README.md  config.json  gemma2b_only.json
distinguish/data/: README.md
distinguish/data/blog_authorship/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/multi_value_aave/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/pan17_variety/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/prism/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/reddit_l2/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/synthetic/: authors.parquet  dataset.json  prompts.parquet
distinguish/data/thoughttrace/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/twitteraae/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/data/wildchat/: README.md  authors.parquet  dataset.json  prompts.parquet
distinguish/docs/: FINDINGS.md  ITERATION4_PLAN.md  residual_scaling_matrix.json
distinguish/scripts/: annotate_prompt_set.py  convert_blog_authorship.py  convert_multi_value_aave.py  convert_pan17_variety.py  convert_prism.py  convert_reddit_l2.py  convert_thoughttrace.py  convert_twitteraae.py  convert_wildchat.py  run_dataset_pipeline.py  serve_results_viewer.py  vast_residual_experiment.py
distinguish/src/annotation/: __init__.py  markedness_codedness_annotator.py
distinguish/src/attributional/: attributional_dimension.py  concept_namer.py
distinguish/src/common/: auto_export.py  base_schema.py  config_loading.py  dataset_annotations.py  dataset_tables.py  dimension_result.py  file_io.py  logging_utils.py  prompt_set_schema.py  run_config.py  stats_utils.py  text_tokenization.py
distinguish/src/conditional/: conditional_analysis.py
distinguish/src/distributional/: c2st_linear.py  distributional_dimension.py  modernbert_c2st.py
distinguish/src/inference/: cohere_embedding_client.py  embedding_runner.py  embedding_store.py  openai_embedding_client.py  residual_stream_extractor.py
distinguish/src/interactional/: facet_annotation.py  interaction_facets.py  interactional_dimension.py
distinguish/src/lexical/: lexical_dimension.py  marked_words_analyzer.py
distinguish/src/pipeline/: dataset_runner.py  dimension_registry.py  pipeline_context.py  run_summary.py  section_explorations.py
distinguish/src/results_viewer/: __init__.py  results_http_server.py  runs_indexer.py
distinguish/src/results_viewer/assets/: viewer.css  viewer.html  viewer.js
distinguish/src/semantic/: mmd_fuse_runner.py  semantic_dimension.py
distinguish/src/syntactic/: neurobiber_extractor.py  syntactic_dimension.py
distinguish/src/topical/: survey_topic_catalog.py  topic_assignment.py  topical_dimension.py  topicgpt_taxonomy.py
distinguish/src/usage/: usage_attitudes.py
distinguish/src/viz/: attributional_plots.py  conditional_plots.py  distributional_plots.py  exploration_plots.py  interactional_plots.py  lexical_calibration_plots.py  lexical_plots.py  plot_style.py  run_comparison_plots.py  semantic_plots.py  sensitivity_curve_plots.py  summary_plots.py  syntactic_plots.py  topical_plots.py  usage_plots.py
distinguish/tests/: conftest.py  test_attributional_decomposition.py  test_conditional_distinguishability.py  test_linear_c2st_validity.py  test_marked_words_calibration.py  test_marked_words_vs_mots_reference.py  test_markedness_codedness_annotator_faults.py  test_mmd_fuse_calibration.py  test_mmd_fuse_vs_reference.py  test_offline_robustness_proofs.py  test_residual_stream_position_layer.py  test_serialization_and_stats_invariants.py  test_syntactic_neurobiber.py  test_topicgpt_vs_reference.py
(+86 files in other folders)
